--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -18,8 +18,8 @@
 
     <!-- Outer Container -->
     <div
-        class="bg-white w-full md:max-w-5xl flex items-center shadow-md rounded-none mb-12 py-8 px-4
-               justify-center mx-auto mt-4 md:mt-8 md:p-8"
+        class="bg-white w-full md:max-w-4xl flex items-center shadow-md rounded-none mb-12 py-8 px-4
+               justify-center mx-auto mt-12 md:p-8"
     >
 
         <!-- Inner Container -->
@@ -150,7 +150,7 @@
                 <a href="{{ staff.get_absolute_url_update_staff }}" class="w-full">
                     <button
                         type="submit"
-                        class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 p-4
+                        class="group relative w-full flex items-center mx-auto justify-center mt-2 mb-4 p-4
                                border border-transparent text-lg font-medium rounded-none text-white bg-green-900
                                hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-offset-2
                                focus:ring-green-800"
@@ -174,7 +174,7 @@
                 <button
                     id="open-delete-modal"
                     type="reset"
-                    class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 p-4
+                    class="group relative w-full flex items-center mx-auto justify-center mt-2 mb-4 p-4
                            border border-red-700 text-lg font-medium rounded-none text-white bg-red-700
                            hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-offset-2
                            focus:ring-red-700 hover:border-red-600"
