--- a/staffapp/templates/stafflist.html
+++ b/staffapp/templates/stafflist.html
@@ -13,12 +13,12 @@
     
     <!-- Staff list -->
     <div
-        class="mt-4 md:mt-8 max-w-3xl mb-12 md:mb-20 bg-white rounded-none border pt-8 pb-0
+        class="mt-12 max-w-4xl mb-12 md:mb-20 bg-white rounded-none border pt-8 pb-0
                mx-auto shadow-md"
     >
         <div class="mx-auto text-center">
             <h5 class="mb-6 text-3xl font-bold leading-none text-gray-900 underline">
-                Staff List
+                All Staff
             </h5>
         </div>
         
