--- a/staffapp/templates/addstaff.html
+++ b/staffapp/templates/addstaff.html
@@ -19,7 +19,7 @@
     <!-- Outer Container -->
     <div
         class="bg-white w-full md:max-w-5xl flex items-center shadow-md rounded-none mb-12
-               justify-center mx-auto mt-4 md:mt-8 py-8"
+               justify-center mx-auto mt-12 py-8"
     >
     
         <!-- Inner Container -->
@@ -369,10 +369,10 @@
                     <!-- Submit -->
                     <button
                         type="submit"
-                        class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 p-4
+                        class="group relative w-full flex items-center mx-auto justify-center mt-6 p-4
                                 border border-transparent text-md font-medium rounded-none text-white bg-green-900
                                 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-offset-2
-                                focus:ring-green-800"
+                                focus:ring-green-900"
                     >
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
                                 fill="currentColor" class="-ml-1 mr-2 h-5 w-5 text-white">
@@ -384,10 +384,10 @@
                     <!-- Clear form -->
                     <button
                         type="reset"
-                        class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 p-4
+                        class="group relative w-full flex items-center mx-auto justify-center mt-6 p-4
                                border border-red-700 text-md font-medium rounded-none text-white bg-red-700
                               hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-offset-2
-                              focus:ring-red-500 hover:border-red-600"
+                              focus:ring-red-700 hover:border-red-600"
                     >
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
                             fill="currentColor" class="-ml-1 mr-2 h-5 w-5 text-white">
