--- a/staffapp/templates/searchresult.html
+++ b/staffapp/templates/searchresult.html
@@ -12,7 +12,7 @@
     
     <!-- Search Result -->
     <div
-        class="mt-4 md:mt-8 max-w-3xl mb-12 md:mb-20 bg-white rounded-none border pt-8 pb-0
+        class="mt-12 max-w-3xl mb-12 md:mb-20 bg-white rounded-none border pt-8 pb-0
                mx-auto shadow-md"
     >
         <div class="mx-auto text-center">
@@ -34,7 +34,7 @@
                                 <!-- Profile Picture -->
                                 <div class="flex-shrink-0">
                                     <img
-                                        class="w-14 h-14 rounded-full"
+                                        class="w-16 h-16 rounded-full"
                                         src="{{ staff.staff_image.url }}"
                                         alt="{{ staff.first_name }}'s' image">
                                 </div>
