--- a/staffapp/templates/staffdeleted.html
+++ b/staffapp/templates/staffdeleted.html
@@ -16,7 +16,7 @@
     
     <!-- Profile Card -->
     <div
-        class="max-w-3xl mt-12 md:mt-8 mx-auto px-8 mb-20 bg-white rounded-none border border-gray-200 shadow-lg"
+        class="max-w-3xl mt-12 mx-auto px-8 mb-12 bg-white rounded-none border border-gray-200 shadow-lg"
     >
 
         <!-- Container -->
