--- a/staffapp/templates/stafflist.html
+++ b/staffapp/templates/stafflist.html
@@ -13,83 +13,11 @@
     
     <!-- Staff list -->
     <div
+        id="stafflist"
         class="mt-12 max-w-4xl mb-12 md:mb-20 bg-white rounded-none border pt-8 pb-0
                mx-auto shadow-md"
     >
-        <div class="mx-auto text-center">
-            <h5 class="mb-6 text-3xl font-bold leading-none text-gray-900 underline">
-                All Staff
-            </h5>
-        </div>
-        
-        <!-- Staff list -->
-        <div class="flow-root">
-            <ul role="list" class="divide-y divide-gray-200">
-                {% for staff in stafflist %}
-                    <li class="p-4 md:p-6 md:py-6 hover:bg-gray-100">
-        
-                        <!-- Profile -->
-                        <div class="flex items-center space-x-4">
-
-                            <!-- Profile Picture -->
-                            <div class="flex-shrink-0">
-                                <img
-                                    class="w-14 h-14 rounded-full"
-                                    src="{{ staff.staff_image.url }}"
-                                    alt="{{ staff.first_name }}'s' image">
-                            </div>
-        
-                            <!-- Name and Email -->
-                            <div class="flex-1 min-w-0">
-                                <p class="text-lg font-semibold text-gray-900 truncate">
-                                    {{ staff.first_name }}
-                                    {% if staff.middle_name %}
-                                        {{ staff.middle_name }}
-                                        {% else %}
-                                            <span></span>
-                                    {% endif %}
-                                    {{ staff.last_name }}
-                                </p>
-                                <p class="text-lg text-gray-500 truncate dark:text-gray-400">
-                                    {{ staff.official_email }}
-                                </p>
-                            </div>
-                            <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-        
-                                <!-- View Profile Button -->
-                                <a href="{{ staff.get_absolute_url }}" target="_blank">
-                                    <button
-                                        type="button"
-                                        class="inline-flex items-center px-4 py-3 border border-2 border-green-800
-                                               rounded-none text-sm font-medium text-white bg-green-800
-                                               hover:bg-green-700 focus:outline-none hover:border-green-700
-                                               focus:ring-4 focus:ring-offset-2 focus:ring-green-800"
-                                    >
-                                        <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            class="mr-2 h-5 w-5"
-                                            fill="none"
-                                            viewBox="0 0 24 24"
-                                            stroke="currentColor"
-                                            stroke-width="2"
-                                        >
-                                            <path stroke-linecap="round" stroke-linejoin="round"
-                                                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                                        </svg>
-                                        View Profile
-                                    </button>
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-        <!-- End of Staff list -->
-
-        <!-- Pagination -->
-        {% include 'snippets/pagination_stafflist.html' with stafflist=page_obj %}        
-
+        {% include 'snippets/htmx-staff-list.html' %}
     </div>
     <!-- End of Staff list -->    
 
