--- a/staffapp/templates/snippets/mobile-menu.html
+++ b/staffapp/templates/snippets/mobile-menu.html
@@ -10,9 +10,9 @@
 		<!-- Home -->
 		<a
 		    href="{% url 'index' %}"
-		    class="{% active_link 'index' strict=True css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover:text-stone-50' %}
+		    class="{% active_link 'index' strict=True css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover-active-text' %}
 		           bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-bold
-		           hover:bg-none hover:text-green-600"
+		           hover:bg-none hover:text-green-700"
 		    aria-current="page"
 		>
 			<!-- Home -->
@@ -33,9 +33,9 @@
 		<!-- Add a Staff -->
 		<a
 		    href="{% url 'addstaff' %}"
-		    class="{% active_link 'addstaff' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover:text-stone-50' %}
+		    class="{% active_link 'addstaff' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover-active-text' %}
 		            bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-bold
-		            hover:bg-none hover:text-green-600"
+		            hover:bg-none hover:text-green-700"
 		    aria-current="page"
 		>
 		    <!-- Plus icon -->
@@ -54,9 +54,9 @@
 		<!-- Staff list -->
 		<a
 		    href="{% url 'stafflist' %}"
-		    class="{% active_link 'stafflist' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover:text-stone-50' %}
+		    class="{% active_link 'stafflist' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover-active-text' %}
 		            bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-bold
-		            hover:bg-none hover:text-green-600"
+		            hover:bg-none hover:text-green-700"
 		    aria-current="page"
 		>
 		    <!-- Staff icon -->
@@ -77,9 +77,9 @@
 		<!-- Birthday -->
 		<a
 		    href="{% url 'birthday' %}"
-		    class="{% active_link 'birthday' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover:text-stone-50' %}
+		    class="{% active_link 'birthday' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover-active-text' %}
 		           bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-bold
-		           hover:bg-none hover:text-green-600"
+		           hover:bg-none hover:text-green-700"
 		    aria-current="page"
 		>
 		    <!-- Birthday icon -->
