--- a/staffapp/templates/staffdeleted.html
+++ b/staffapp/templates/staffdeleted.html
@@ -10,17 +10,13 @@
 {% endblock %}
 
 {% block content %}
-
-    <!-- Search bar -->
-    {% include 'snippets/searchbar.html' %}
-    
     <!-- Profile Card -->
     <div
-        class="max-w-3xl mt-12 mx-auto px-8 mb-12 bg-white rounded-none border border-gray-200 shadow-lg"
+        class="flex justify-center items-center mx-auto rounded-none shadow-sm"
     >
 
         <!-- Container -->
-        <div class="flex flex-col items-center py-8">
+        <div class="mt-12 mb-20 md:mt-24 mx-auto p-8 bg-white w-full max-w-3xl">
 
             <!-- Checkmark icon -->
             <svg
@@ -33,30 +29,18 @@
             >
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
             </svg>
-<!--            <svg-->
-<!--                xmlns="http://www.w3.org/2000/svg"-->
-<!--                viewBox="0 0 24 24"-->
-<!--                fill="currentColor"-->
-<!--                class="mx-auto mb-4 w-14 h-14 text-green-600"-->
-<!--            >-->
-<!--                <path fill-rule="evenodd" d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm13.36-1.814a.75.75 0 1 0-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 0 0-1.06 1.06l2.25 2.25a.75.75 0 0 0 1.14-.094l3.75-5.25Z" clip-rule="evenodd" />-->
-<!--            </svg>-->
-            
+
             <!-- Name -->
-            <h5 class="mb-4 text-3xl text-center font-extrabold text-gray-800">Sebastian Bran
-                {{ first_name.title }}
-                {% if middle_name %}
-                    {{ middle_name.title }}
-                    {% else %}
-                        <span></span>
-                {% endif %}
-                {{ last_name.title }}
+            <h5 class="mb-4 text-3xl text-center font-extrabold text-gray-800">
+                {{ request.session.first_name.title }}
+                {{ request.session.middle_name.title }}
+                {{ request.session.last_name.title }}
             </h5>
 
             <!-- Report -->
-            <span class="text-xl font-bold text-center text-gray-500">
-                has been removed from the database
-            </span>
+            <p class="text-xl font-bold text-center text-gray-500">
+                has been deleted from the database
+            </p>
 
         <!-- End - Container -->
         </div>
