--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -18,7 +18,7 @@
 
     <!-- Outer Container -->
     <div
-        class="bg-white w-full md:max-w-4xl flex items-center shadow-md rounded-none mb-12 py-8 px-4
+        class="bg-white w-full md:max-w-4xl flex items-center shadow-md rounded-none mb-20 py-8 px-4
                justify-center mx-auto mt-12 md:p-8"
     >
 
@@ -142,6 +142,10 @@
                     </dl>
                 </div>
             </div>
+
+            <p class="hidden mt-12 font-semibold text-lg text-center text-gray-600">
+                This page has been viewed {{ view_count }} times
+            </p>
 
             <!-- Submit Button -->
             <div class="flex items-center mx-auto w-full md:max-w-xl space-x-4 justify-center mt-14">
