--- a/staffapp/templates/base.html
+++ b/staffapp/templates/base.html
@@ -5,7 +5,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" id="target">
 	<head>
         {% block title%}{% endblock %}
 		<meta charset="UTF-8">
@@ -37,6 +37,10 @@
 				box-shadow:
 					rgba(0, 0, 0, 0.35) 0px 5px 15px;
 			}
+
+			.hover-active-text {
+				color: rgb(255 255 255) !important;
+			}
 		</style>
 
 	</head>
@@ -44,12 +48,12 @@
 	<!-- Body -->
 	<body
 		hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-		class="bg-index bg-no-repeat bg-cover bg-center bg-fixed font-sans min-h-screen bg-gray-900
-				font-sans p-2 md:p-4 mx-auto"
+		class="bg-index bg-no-repeat bg-cover bg-center bg-fixed font-sans min-h-screen
+			   bg-gray-900 font-sans p-2 md:p-4 mx-auto"
 	>
 
 		<!-- Nav bar -->
-		<nav class="bg-white shadow-md">
+		<nav class="bg-white rounded-none">
 			<div class="mx-auto max-w-full px-4 md:pr-0">
 				<div class="relative flex h-20 items-center justify-between">
 
@@ -112,12 +116,12 @@
 
 						<!-- Nav Links -->
 						<div class="hidden flex items-center md:block">
-							<div class="flex items-center space-x-1">
+							<div class="flex items-center space-x-0">
 								<!-- Home -->
 								<a
 								    href="{% url 'index' %}"
 								    class="{% active_link 'index' strict=True css_class='text-white md:text-white bg-green-900 md:hover:h-20 md:hover:bg-green-900 hover:text-white' %}
-								           flex h-20 items-center hover:h-20 hover:bg-green-900 text-gray-800 hover:text-white
+								           flex h-20 items-center hover:h-20 hover:bg-green-700 text-gray-800 hover:text-white
 								           rounded-none p-4 md:px-6 text-lg font-extrabold"
 								    aria-current="page"
 								>
@@ -140,7 +144,7 @@
 								<a
 								    href="{% url 'addstaff' %}"
 								    class="{% active_link 'addstaff' css_class='text-white md:text-white bg-green-900 md:hover:h-20 md:hover:bg-green-900' %}
-								            flex h-20 items-center hover:h-20 hover:bg-green-900 text-gray-800 hover:text-white
+								            flex h-20 items-center hover:h-20 hover:bg-green-700 text-gray-800 hover:text-white
 								            rounded-none p-4 md:px-6 text-lg font-extrabold"
 								    aria-current="page"
 								>
@@ -160,8 +164,8 @@
 								<!-- All Staff -->
 								<a
 								    href="{% url 'stafflist' %}"
-								    class="{% active_link 'stafflist' css_class='md:text-white bg-green-900 md:hover:h-20 md:hover:bg-green-900 hover:text-white' %}
-								            flex h-20 items-center hover:h-20 hover:bg-green-900 text-gray-800 hover:text-white
+								    class="{% active_link 'stafflist || searchresult || deletestaff || staffdetails || updatestaff' css_class='md:text-white bg-green-900 md:hover:h-20 md:hover:bg-green-900 hover:text-white' %}
+								            flex h-20 items-center hover:h-20 hover:bg-green-700 text-gray-800 hover:text-white
 								            rounded-none p-4 md:px-6 text-lg font-extrabold"
 								    aria-current="page"
 								>
@@ -185,7 +189,7 @@
 								    href="{% url 'birthday' %}"
 								    target="_blank"
 								    class="{% active_link 'birthday' strict=True css_class='md:text-white bg-green-900 md:hover:h-20 md:hover:bg-green-900 hover:text-white' %}
-								            flex h-20 items-center hover:h-20 hover:bg-green-900 text-gray-800 hover:text-white
+								            flex h-20 items-center hover:h-20 hover:bg-green-700 text-gray-800 hover:text-white
 								            rounded-none p-4 md:px-6 text-lg font-extrabold"
 								    aria-current="page"
 								>
@@ -222,11 +226,11 @@
 	<!-- End Body -->
 	
 	<!-- Footer -->
-	<footer class="sticky top-[100vh] mb-auto py-0 text-white mx-auto">
+	<footer class="sticky top-[100vh] py-0 text-white mx-auto">
 
 		<!-- Copyright, Address and Social Media container -->
 		<div class="grid grid-cols-1 grid-row-3 gap-x-4 gap-y-7 md:grid-cols-3 md:grid-rows-1 place-contents-center
-					bg-black rounded-sm opacity-70 md:p-5 p-6 m-auto">
+					bg-black rounded-none opacity-70 md:p-5 p-6 m-auto">
 
 			<!-- Copyright section -->
 			<div class="text-center grid md:place-items-center">
