--- a/staffapp/templates/updatestaff.html
+++ b/staffapp/templates/updatestaff.html
@@ -23,7 +23,7 @@
     >
 
         <!-- Inner Container -->
-        <div class="w-full -mt-6 min-h-full px-8 lg:px-10 pt-8 pb-4">
+        <div class="w-full -mt-6 min-h-full px-4 md:px-6 lg:px-10 pt-8 pb-4">
 
             <!-- Profile Picture -->
             <div class="mb-4 flex flex-col items-center">
@@ -356,9 +356,9 @@
                     <button
                         type="submit"
                         class="group relative w-full flex items-center mx-auto justify-center mt-6 p-4
-                                border border-transparent text-md font-medium rounded-none text-white bg-green-900
-                                hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-offset-2
-                                focus:ring-green-800"
+                               border border-transparent text-md font-medium rounded-none text-white
+                               hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-offset-2
+                               focus:ring-green-800 bg-green-900"
                     >
                         <span class="inline-flex items-center">
                             <svg
@@ -366,7 +366,8 @@
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 20 20"
                                 fill="currentColor"
-                                aria-hidden="true">
+                                aria-hidden="true"
+                            >
                                 <path
                                     d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
                             </svg>
