fixed 'birthday' page

--- a/birthday/templates/bmessage-1.html
+++ b/birthday/templates/bmessage-1.html
@@ -55,7 +55,7 @@
                             
             <p style="margin-top: 20px;font-size: 1.3em;font-family: Arial, Helvetica, sans-serif;font-weight: normal;text-align: center;">From all of us at
                 the<br>
-            <h1 style="margin-top: -15px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;text-align: center;">MINISTRY OF INDUSTRY, TRADE <br>AND
+            <h1 style="margin-top: -15px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;text-align: center;">MINISTRY OF BUSINESS, TRADE <br>AND
                 COOPERATIVES</h1>
             </p>
             <img src="https://github.com/ethernalarts/mitcbdayapp/raw/master/sendmail/templates/static/img/mitc-logo-trans.png" 
@@ -85,7 +85,7 @@
                     | <a href="https://www.linkedin.com/in/edo-state-itc-b6b848234" target="blank" style="color: whitesmoke;cursor: pointer;text-decoration: none;">LinkedIn</a>
                     | <a style="color: whitesmoke;cursor: pointer;text-decoration: none;">Twitter</a>
                 </p> --><br>
-                <p style="margin-top: 20px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;font-weight: 400;text-align: center;color: green;">&copy; 2022 Edo State Ministry of Industry, Trade and Cooperatives<br>
+                <p style="margin-top: 20px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;font-weight: 400;text-align: center;color: green;">&copy; 2024 Edo State Ministry of Business, Trade and Cooperatives<br>
                     All Rights Reserved.
                 </p>            
             </footer>
