--- a/staffapp/templates/snippets/mobile-menu.html
+++ b/staffapp/templates/snippets/mobile-menu.html
@@ -76,8 +76,8 @@
 
 		<!-- Birthday -->
 		<a
-		    href="{% url 'birthday' %}"
-		    class="{% active_link 'birthday' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover-active-text' %}
+		    href="{% url 'bday:birthday' %}"
+		    class="{% active_link 'bday:birthday' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover-active-text' %}
 		           bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-bold
 		           hover:bg-none hover:text-green-700"
 		    aria-current="page"
