--- a/staffapp/templates/snippets/htmx-searchresult-list.html
+++ b/staffapp/templates/snippets/htmx-searchresult-list.html
@@ -1,11 +1,11 @@
 <div class="mx-auto text-center">
-    <h5 class="mb-6 text-2xl md:text-3xl font-bold leading-none text-gray-900">
+    <h5 class="text-2xl md:text-3xl font-bold leading-none text-gray-900">
         Found {{ total_results }} result(s) for "{{ query }}"
     </h5>
 </div>
 
 <!-- Search Results -->
-<div class="flow-root">
+<div class="mt-4 flow-root">
     <ul role="list" class="divide-y divide-gray-200">
         {% if searchresult %}
             {% for staff in searchresult %}
