--- a/staffapp/templates/snippets/messages.html
+++ b/staffapp/templates/snippets/messages.html
@@ -67,32 +67,42 @@
 						role="alert"
 					>
 
-							<!-- X mark with white background -->
-							<div
-								class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 bg-white
-										text-red-700 rounded-full"
-							>
-								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5">
-									<path fill-rule="evenodd" d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z" clip-rule="evenodd" />
-								</svg>
-								<span class="sr-only">Check icon</span>
-							</div>
-
-							<!-- error message -->
-							<span class="text-lg text-center max-w-md font-medium justify-self-center mx-auto">
-								{{ message }}
-							</span>
-
-							<!-- close (x) button -->
-							<button type="button"
-									class="close-error-message ml-auto -mx-1.5 -my-1.5 bg-red-700 hover:bg-white text-white
-											hover:text-red-600 rounded-none focus:ring-2 focus:ring-gray-300 p-1.5
-											inline-flex h-8 w-8"
-									data-dismiss-target="#toast-success" aria-label="Close">
-								<span class="sr-only">Close</span>
-								<svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-							</button>
+						<!-- X mark with white background -->
+						<div
+							class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 bg-white
+									text-red-700 rounded-full"
+						>
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5">
+								<path fill-rule="evenodd" d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z" clip-rule="evenodd" />
+							</svg>
+							<span class="sr-only">Check icon</span>
 						</div>
+
+						<!-- error message -->
+						<span class="text-lg text-center max-w-md font-medium justify-self-center mx-auto">
+							{{ message }}
+						</span>
+
+						<!-- close (x) button -->
+						<button
+							type="button"
+							class="close-error-message ml-auto -mx-1.5 -my-1.5 bg-red-700 hover:bg-white text-white
+									hover:text-red-600 rounded-none focus:ring-2 focus:ring-gray-300 p-1.5
+									inline-flex h-8 w-8"
+							data-dismiss-target="#toast-success"
+							aria-label="Close"
+						>
+							<span class="sr-only">Close</span>
+							<svg
+								aria-hidden="true"
+								class="w-5 h-5"
+								fill="currentColor"
+								viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
+							>
+								<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+							</svg>
+						</button>
+					</div>
 				{% endif %}
 			{% endfor %}
 		{% endif %}
