--- a/staffapp/templates/snippets/searchbar.html
+++ b/staffapp/templates/snippets/searchbar.html
@@ -39,9 +39,9 @@
         <!-- Submit Query -->
         <button
             type="submit"
-            class="px-8 py-4 ml-2 text-md font-medium text-white bg-green-900 rounded-none border ring-1 ring-green-900
-                    border-2 border-green-900 hover:border-green-800 hover:bg-green-800 focus:ring-0
-                    focus:outline-none focus:ring-green-800"
+            class="px-8 py-4 ml-2 text-md font-medium text-white bg-green-900 rounded-none ring-2 ring-green-900
+                   hover:bg-green-800 hover:ring-green-800 focus:outline-none focus:ring-green-600
+                   focus:bg-green-600"
         >
             <svg
                 class="w-6 h-6"
